changed heading font. add flex styling to form elements of login page. Known issue: login and create account forms do not wrap as desired for mobile size display.

--- a/src/sass/forms.scss
+++ b/src/sass/forms.scss
@@ -1,3 +1,15 @@
+.account-form-section {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.login-form {
+  flex: 0 45%;
+}
+
 .btn-primary, .btn-success {
   margin-top: 1em;
 }
