--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -1,3 +1,8 @@
+header {
+  h1 {
+    font-family: 'Lora', serif;
+  }
+}
 .glyphicon-send {
   margin-right: 1em;
 }
